2022-02-25  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-0x0-upload): rewritten.

2022-02-24  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el: new file.

	* eev-load.el (eev-kla): load "eev-kla.el".

	* .dir-locals.el: new file.

	* eev-edit.el (ee-copy-preceding-tag-to-kill-ring): return str.

2022-02-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (code-youtubevideo, find-code-youtubevideo)
	(ee-code-youtubevideo): new functions.

	* eev-tlinks.el (find-youtubedl-links): use `code-youtubevideo'.

2022-02-15  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-1stclassvideodef): new function.

2022-02-14  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-1stclassvideoindex): new function.
	(ee-find-1stclassvideo-links): use `find-1stclassvideoindex'.

	* eev-plinks.el (find-anggwget, find-anggwgeta)
	(find-anggwget-elisp, find-anggwgeta-elisp): new function.

2022-02-13  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (find-oficina20210video): new function.

2022-02-12  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-find-1stclassvideo-links): changed the part of
	the template that has a "(defun find-*video ...)".
	(find-1stclassvideos): added an (interactive).

	* eev-videolinks.el (find-eev2019video, find-eev2020video)
	(find-eev2021video, find-eev2021bvideo, find-eevnavvideo)
	(find-eevtemplvideo, find-eevfherelvideo, find-eevtestblsvideo)
	(find-eevvlinksvideo, find-oficina2021avideo)
	(find-oficina2021bvideo, find-2021workshop1video)
	(find-2021workshop2video, find-2021workshop3video)
	(find-2021workshop4video, find-2021workshop5video)
	(find-2021workshop6video, find-2021orgfornonusersvideo)
	(find-2021ffllvideo, find-2022eevmake0video)
	(find-2022findeevanggvideo, find-2022findelispintrovideo):
	redefined using the new template.
	(find-2021ssrvideo): new function.

2022-02-11  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-find-1stclassvideo-links): new function.